--- a/dev/Train.ipynb
+++ b/dev/Train.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "26ebab71",
+   "execution_count": 1,
+   "id": "a46be3de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,69 +15,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4fcfbd7f",
+   "execution_count": null,
+   "id": "2c95ae52",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_model(model_file = None, loss_func = 'mean_absolute_error', output_layer = 4, \n",
-    "              number_of_hidden_layers = 7, \n",
-    "              input_layer = 305,\n",
-    "              n_hidden_layer = 305,\n",
-    "              metrics = [\n",
-    "                metrics.RootMeanSquaredError(),\n",
-    "                metrics.MeanAbsoluteError(),\n",
-    "                    metrics.MeanAbsolutePercentageError()\n",
-    "            ]):\n",
-    "        if(not model_file):\n",
-    "            model = tf.keras.models.Sequential()\n",
-    "            \n",
-    "            model.add(tf.keras.layers.Dense(input_layer, activation='relu'))\n",
-    "            for i in range(1, number_of_hidden_layers+1):\n",
-    "                model.add(tf.keras.layers.Dense(n_hidden_layer/i, activation='relu'))\n",
-    "                \n",
-    "            model.add(tf.keras.layers.Dense(output_layer,))\n",
-    "            \n",
-    "            print(loss_func, output_layer, model_file)\n",
-    "            if (loss_func == 'mean_absolute_error'):\n",
-    "                model.compile(optimizer='Adam', loss = 'mean_absolute_error', metrics=metrics)\n",
-    "            \n",
-    "            elif (loss_func == 'categorical_crossentropy'):  \n",
-    "                model.compile(optimizer='Adam', loss=tf.keras.losses.CategoricalCrossentropy(), metrics=metrics)\n",
-    "            return model\n",
-    "\n",
-    "        else:\n",
-    "            return tf.keras.models.load_model(model_file)\n",
-    "\n",
-    "class DeepModel:\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    def __init__(self, model_file = None, loss_func = 'mean_absolute_error'):\n",
-    "        self.model = get_model(model_file= model_file, loss_func= loss_func)\n",
-    "     \n",
-    "        \n",
-    "\n",
-    "        \n",
-    "    def train(self, X, Y, *args, **kargs):\n",
-    "        self.model.fit(X, Y, *args, **kargs)\n",
-    "        \n",
-    "    \n",
-    "    def predict(self, *args, **kargs):\n",
-    "        self.model.predict(*args, **kargs)\n",
-    "    \n",
-    "    def evaluate(self, *args, **kargs):\n",
-    "        self.model.evaluate(*args, **kargs)\n",
-    "        \n",
-    "    def summury(self):\n",
-    "        return model.summury()\n",
-    "        "
+    "PATH = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f19cfbf4",
+   "execution_count": 2,
+   "id": "e0636dd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DeepModel(tf.keras.models.Sequential):\n",
+    "\n",
+    "    def __init__(self, model_file=None,\n",
+    "                 loss_func='mean_absolute_error',\n",
+    "                 n_input_layer=305,\n",
+    "                 number_of_hidden_layers=5,\n",
+    "                 neurons_hidden_layer=305,\n",
+    "                 neurons_output_layer=4,\n",
+    "                 metrics=[\n",
+    "                     metrics.RootMeanSquaredError(),\n",
+    "                     metrics.MeanAbsoluteError(),\n",
+    "                     metrics.MeanAbsolutePercentageError()],\n",
+    "                 * args, **kwargs):\n",
+    "\n",
+    "        super(DeepModel, self).__init__(*args, **kwargs)\n",
+    "\n",
+    "        self.add(tf.keras.layers.Dense(n_input_layer, activation='relu'))\n",
+    "        \n",
+    "        for i in range(number_of_hidden_layers):\n",
+    "            self.add(tf.keras.layers.Dense(\n",
+    "                neurons_hidden_layer / 2**i, activation='relu'))\n",
+    "\n",
+    "            self.add(tf.keras.layers.Dense(\n",
+    "                neurons_output_layer, activation='linear'))\n",
+    "\n",
+    "            if (loss_func == 'mean_absolute_error'):\n",
+    "                self.compile(optimizer='Adam',\n",
+    "                             loss='mean_absolute_error', metrics=metrics)\n",
+    "\n",
+    "            elif (loss_func == 'categorical_crossentropy'):\n",
+    "                self.compile(optimizer='Adam',\n",
+    "                             loss='mean_squared_error', metrics=metrics)\n",
+    "\n",
+    "            elif (loss_func == 'mean_squared_logarithmic_error'):\n",
+    "                self.compile(\n",
+    "                    optimizer='Adam', loss='mean_squared_logarithmic_error', metrics=metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7fcdcded",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7c6cbc87",
+   "execution_count": 4,
+   "id": "b1c11a8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,8 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c7e78433",
+   "execution_count": 5,
+   "id": "1d1782d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,47 +133,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "20b9835e",
+   "execution_count": 6,
+   "id": "f71fcf48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = get_data('data.csv')"
+    "X, y = get_data(PATH + 'data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "c6cb2e66",
+   "execution_count": 7,
+   "id": "fc5463a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mean_absolute_error 4 None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = DeepModel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "facbb082",
+   "execution_count": 8,
+   "id": "3c268c25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = split(X, y)\n",
+    "pd_X_train, pd_X_test, pd_y_train, pd_y_test = split(X, y)\n",
     "del X, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "beb1efc7",
+   "execution_count": 9,
+   "id": "ee05193c",
    "metadata": {},
    "outputs": [
     {
@@ -188,19 +174,19 @@
        "(1464991, 302)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train.shape"
+    "pd_X_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "95863627",
+   "execution_count": 10,
+   "id": "cfaa49ef",
    "metadata": {},
    "outputs": [
     {
@@ -209,82 +195,123 @@
        "(1464991, 4)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_train.shape"
+    "pd_y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c67e9d24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "X_train = pd_X_train.values\n",
+    "y_train = pd_y_train.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "99d79b1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del pd_X_train, pd_y_train"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "663134a5",
+   "id": "ab7c7bb4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "45781/45781 [==============================] - 565s 12ms/step - loss: 0.0561 - root_mean_squared_error: 0.8342 - mean_absolute_error: 0.0561 - mean_absolute_percentage_error: 2178806.7500\n",
-      "Epoch 2/10\n",
-      "45781/45781 [==============================] - 427s 9ms/step - loss: 0.0456 - root_mean_squared_error: 0.7665 - mean_absolute_error: 0.0456 - mean_absolute_percentage_error: 1251578.2500\n",
-      "Epoch 3/10\n",
-      "45781/45781 [==============================] - 438s 10ms/step - loss: 0.0433 - root_mean_squared_error: 0.7601 - mean_absolute_error: 0.0433 - mean_absolute_percentage_error: 1104062.3750\n",
-      "Epoch 4/10\n",
-      "45781/45781 [==============================] - 335s 7ms/step - loss: 0.0416 - root_mean_squared_error: 0.7451 - mean_absolute_error: 0.0416 - mean_absolute_percentage_error: 1013719.1250\n",
-      "Epoch 5/10\n",
-      "45781/45781 [==============================] - 276s 6ms/step - loss: 0.0411 - root_mean_squared_error: 0.7436 - mean_absolute_error: 0.0411 - mean_absolute_percentage_error: 989019.1875\n",
-      "Epoch 6/10\n",
-      "45781/45781 [==============================] - 272s 6ms/step - loss: 0.0404 - root_mean_squared_error: 0.7427 - mean_absolute_error: 0.0404 - mean_absolute_percentage_error: 939749.1875\n",
-      "Epoch 7/10\n",
-      "45781/45781 [==============================] - 274s 6ms/step - loss: 0.0403 - root_mean_squared_error: 0.7438 - mean_absolute_error: 0.0403 - mean_absolute_percentage_error: 922872.6875\n",
-      "Epoch 8/10\n",
-      "45781/45781 [==============================] - 281s 6ms/step - loss: 0.0398 - root_mean_squared_error: 0.7329 - mean_absolute_error: 0.0398 - mean_absolute_percentage_error: 932124.5000\n",
-      "Epoch 9/10\n",
-      "45781/45781 [==============================] - 272s 6ms/step - loss: 0.0395 - root_mean_squared_error: 0.7338 - mean_absolute_error: 0.0395 - mean_absolute_percentage_error: 906014.8750\n",
-      "Epoch 10/10\n",
-      "45781/45781 [==============================] - 281s 6ms/step - loss: 0.0392 - root_mean_squared_error: 0.7376 - mean_absolute_error: 0.0392 - mean_absolute_percentage_error: 891679.3750\n"
+      "45781/45781 [==============================] - 212s 5ms/step - loss: 0.0537 - root_mean_squared_error: 0.8080 - mean_absolute_error: 0.0537 - mean_absolute_percentage_error: 2042273.5000\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f9404cb2af0>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.train(X_train, y_train, verbose = 1, epochs = 10)"
+    "model.fit(X_train, y_train, verbose = 1, epochs = 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34a7a08b",
+   "id": "660dee6e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1d8f2984",
+   "execution_count": 15,
+   "id": "22658d23",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: model1/assets\n"
+      "INFO:tensorflow:Assets written to: model2/assets\n"
      ]
     }
    ],
    "source": [
-    "model.model.save(\"model1\")"
+    "model.save(PATH + \"model2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cf567073",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46/46 [==============================] - 0s 3ms/step - loss: 0.0744 - root_mean_squared_error: 0.8714 - mean_absolute_error: 0.0744 - mean_absolute_percentage_error: 1385131.7500\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.07437730580568314, 0.8714499473571777, 0.07437730580568314, 1385131.75]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(pd_X_test, pd_y_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03fbbafb",
+   "id": "a8944725",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -295,18 +322,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   }
  },
  "nbformat": 4,
